Prevent the "th" superscript from making the footer look misaligned.

--- a/Titan.WebCore/resources/layout/css/layout-titan.scss
+++ b/Titan.WebCore/resources/layout/css/layout-titan.scss
@@ -65,5 +65,10 @@ body .layout-wrapper .layout-main
         {
             margin-bottom: 0
         }
+
+        sup
+        {
+            line-height: 0
+        }
     }
 }
